# python-project-49

./: .gitignore  README.md  password  password.pub  pyproject.toml
brain_games/: cli.py  games_logic.py
brain_games/game_modules/: calc_game.py  gcd_game.py  is_even_game.py  is_prime_game.py  progression_game.py
brain_games/scripts/: brain_even.py  brain_games.py  calc_script.py  gcd_script.py  is_even_script.py  is_prime_script.py  progression_script.py
