[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dosegaev <dosegaevka@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.is_even_script:main"
brain-calc = "brain_games.scripts.calc_script:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-bacend = "poetry.core.masonry.api"
